src/objects/Fund__c.object
<CustomObject>
    <fields>
        <fullName>Another_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Another Fund Connection</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount__c</fullName>
        <formula>Target_Fund_Amount__c -  Total_Commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Fund_Amount__c</fullName>
        <label>Target Fund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commitment__c</fullName>
        <label>Total Commitment</label>
        <summarizedField>Commitment__c.Target_Commitment__c</summarizedField>
        <summaryForeignKey>Commitment__c.Fund__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>